--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,13 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
+node_modules
 
 # next.js
-/.next/
-/out/
+.next
+out
 
 # production
-/build
-
-# misc
-.DS_Store
-*.pem
+build
+dist
 
 # debug
 npm-debug.log*
@@ -32,6 +22,3 @@ yarn-error.log*
 
 # vercel
 .vercel
-
-# server
-dist
