--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "reddit-clone",
+  "private": true,
   "workspaces": [
     "client",
     "server"
   ],
   "scripts": {
-    "migration": "yarn workspace server migration:run",
+    "migration:create": "yarn workspace server migration:create",
+    "migration:generate": "yarn workspace server migration:generate",
+    "migration:run": "yarn workspace server migration:run",
+    "migration:revert": "yarn workspace server migration:revert",
     "server": "yarn workspace server build && yarn workspace server start",
     "client": "yarn workspace client dev",
     "sync": "concurrently \"yarn run server\" \"sleep 20 && yarn workspace client sync\"",
