--- a/server/ormconfig.json
+++ b/server/ormconfig.json
@@ -4,7 +4,7 @@
 	"port": 5432,
 	"username": "postgres",
 	"password": "postgres",
-	"database": "database",
+	"database": "reddit",
 	"entities": ["src/entities/*.ts"],
 	"migrations": ["src/migrations/*.ts"],
 	"cli": {
