--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -23,6 +23,6 @@
 		"resolveJsonModule": true,
 		"baseUrl": "."
 	},
+	"include": ["./src/**/*.tsx", "./src/**/*.ts"],
 	"exclude": ["node_modules"],
-	"include": ["./src/**/*.tsx", "./src/**/*.ts"]
 }
